# Neural_Wings-demo

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  README_EN.md  package-lock.json  update_assets.bat  件需求构思文档.md
.github/workflows/: release.yml
ai_train/: check.py  ppo.py  visualize_sensors.py
assets/config/: cameras_config.json  client_identity.json  engine_config.json  input_config.json  input_config_2.json
assets/config/default/: input_config.json
assets/models/: plane.mtl
assets/prefabs/: bullet.json  cube.json  david.json  ground.json  light_cube.json  light_sphere.json  local_player_anchor.json  mine_bullet.json  particle_cube.json  plane.json  remote_player.json  rotate_cube.json  shader_cube.json  sound_cube.json  sphere.json  texture_cube.json  tracking_bullet.json
assets/scenes/: cyber_glitch_world.json  david.json  test_scene copy.json  test_scene.json  test_scene_particle_multiRT.json
assets/shaders/: base.vs  default.fs  default.vs  depth.fs  hologram.fs  lighting.fs  reflect_Skybox.fs  rgbView.fs  rim_light.fs
assets/shaders/lighting/: depth.fs  depth.vs  lighting.fs  point_depth.fs  point_depth.vs
assets/shaders/mine_range/: sphere_range.fs  sphere_range.vs
assets/shaders/outline/: outline.fs  outline.vs
assets/shaders/particles/compute/: default.vs  sph copy.vs  sph.vs  test_update.vs  tracking_bullet.vs
assets/shaders/particles/render/: billboard copy.vs  billboard.vs  fluid.fs  fluid_depth.fs  fluid_thickness.fs  soft copy.fs  soft.fs
assets/shaders/postprocess/: bilateral_blur.fs  blur.fs  bright.fs  combine.fs  debug.fs  default.fs  default.vs  depthTest.fs  normalBuild.fs  particle_test.fs  sph_ssf.fs  test.fs
assets/shaders/postprocess/GTAO/: combine.fs  gtao.fs
assets/shaders/postprocess/ascii/: ascii.fs
assets/shaders/postprocess/bloom/: bloom.fs
assets/shaders/postprocess/cloud/: clumpy_cloud.fs  foggy.fs
assets/shaders/postprocess/fog/: fog.fs
assets/shaders/skybox/: skybox.fs  skybox.vs
assets/shaders/texture/: default_texture.fs  default_texture.vs
assets/shaders/utils/: cubemap.fs  cubemap.vs
assets/sounds/: vel_01.m4s.pkf
assets/textures/gif/: 1.atlas.json  2.atlas.json  3.atlas.json
assets/view/: SPH_SSF.json  test_view copy.json  test_view.json  test_view_particle_multiRT.json
frame-process-editor/: index.html  package-lock.json  package.json
frame-process-editor/src/: App.css  App.tsx  index.css  store.ts  types.ts
frame-process-editor/src/nodes/: InputNode.tsx  OutputNode.tsx  ParticleNode.tsx  PassNode.tsx  TextureNode.tsx  UniformItem.tsx
src/: main.cpp  main_beck.cpp  shell.html
src/Engine/: Engine.h
src/Engine/AI/: AIEnvironment.cpp  AIEnvironment.h  PythonBridge.cpp
src/Engine/Config/: Config.cpp  Config.h  EngineConfig.h
src/Engine/Core/: Core.h  GameObject.cpp  GameObject.h  GameWorld.cpp  GameWorld.h
src/Engine/Core/Components/: AudioComponent.h  Components.h  IComponent.h  IScriptableComponent.h  LightComponent.h  RenderComponent.h  RigidBodyComponent.h  ScriptComponent.h  TransformComponent.cpp  TransformComponent.h
src/Engine/Core/Events/: EventManager.h  Events.h  IEvent.h
src/Engine/Core/GameObject/: GameObject.cpp  GameObject.h  GameObjectFactory.cpp  GameObjectFactory.h  GameObjectPool.cpp  GameObjectPool.h
src/Engine/Graphics/: CameraManager.cpp  Graphics.h  ParticleTODO.md  PostProcessPass.h  RenderMaterial.h  Renderer.cpp  Renderer.h  ShaderWrapper.cpp  ShaderWrapper.h  mCamera.cpp  mCamera.h
src/Engine/Graphics/Camera/: CameraManager.cpp  CameraManager.h  mCamera.cpp  mCamera.h
src/Engine/Graphics/Lighting/: LightingManager.cpp  LightingManager.h
src/Engine/Graphics/Particle/: GPUParticle.h  GPUParticleBuffer.cpp  GPUParticleBuffer.h  IParticleInitializer.h  ParticleEmiter.cpp  ParticleEmitter.h  ParticleFactory.h  ParticleSystem.cpp  ParticleSystem.h  TFBManager.cpp  TFBManager.h
src/Engine/Graphics/PostProcess/: PostProcessPass.h  PostProcesser.cpp  PostProcesser.h
src/Engine/Graphics/RenderView/: RenderViewer.cpp  RenderViewer.h
src/Engine/Graphics/Skybox/: Skybox.cpp  Skybox.h
src/Engine/Math/: Math.h
src/Engine/Math/Complex/: Complex.cpp  Complex.h
src/Engine/Math/Core/: MathCommon.h
src/Engine/Network/: NetTypes.h  Network.h
src/Engine/Network/Chat/: ChatManager.cpp  ChatManager.h
src/Engine/Network/Client/: ClientIdentity.cpp  ClientIdentity.h  NetworkClient.cpp  NetworkClient.h
src/Engine/Network/Protocol/: MessageTypes.h  Messages.h  PacketSerializer.h
src/Engine/Network/Sync/: NetworkSyncComponent.h  NetworkSyncSystem.cpp  NetworkSyncSystem.h
src/Engine/Network/Transport/: INetworkTransport.h  NBNetTransport.cpp  NBNetTransport.h  nbnet_bridge.js  nbnet_client_impl.c
src/Engine/System/: System.h
src/Engine/System/Audio/: AudioManager.cpp  AudioManager.h
src/Engine/System/Input/: InputManager.cpp  (+1 more)
src/Engine/UI/: UI.h  UILayer.h  UltralightLayer.cpp  UltralightLayer.h  WebLayer.h
src/Engine/Utils/: JsonParser.h  Timer.cpp
src/Game/: Screen.h
src/Game/AI/: AIEnvironment.cpp  AIEnvironment.h  PythonBridge.cpp
src/Game/Events/: CombatEvents.h
src/Game/HUD/: AttitudeHud.cpp  EntityPlateHud.cpp  EntityPlateHud.h  HUD.h  MyHudState.h  WeaponHud.cpp  WeaponHud.h
src/Game/Screen/: GameplayScreen.cpp  GameplayScreen.h  MainMenuScreen.cpp  MainMenuScreen.h  MyScreenState.h  OptionsScreen.cpp  OptionsScreen.h  ScreenState.h  StartScreen.cpp  StartScreen.h
src/Game/Scripts/: AudioScript.cpp  AudioScript.h  CollisionListener.h  HealthScript.cpp  HealthScript.h  LocalPlayerSyncScript.cpp  LocalPlayerSyncScript.h  PlayerControlScript.cpp  PlayerControlScript.h  RayScript.cpp  RayScript.h  RotatorScript.cpp  Scripts.h  Weapon.cpp  Weapon.h
tools/: gen_scene.py  preprocess_gif_textures.py  setup_third_party.ps1
ui/: README.md  index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.vue  app.js  index.html  main.js  style.css
ui/src/pages/: ChatHUD.vue  MenuScreen.js  MenuScreen.vue  NotFoundScreen.vue  OptionsScreen.js  OptionsScreen.vue  StartScreen.js  StartScreen.vue
(+65 files in other folders)
